[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
bpython = "^0.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
