[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "^2.0.1"
numpy = "^1.24.3"
matplotlib = "^3.7.2"
bpython = "^0.24"
ipykernel = "^6.25.1"
jupyter = "^1.0.0"
pandas = "^2.0.3"
torchaudio = "^2.0.2"
llvmlite = "0.40.1"
librosa = "0.10.0.post2"
setuptools = "^68.0.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
